fighting with quey 10010 error

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\DTO\" />
+    <Folder Include="Models\ViewModel\" />
     <Folder Include="Views\Shared\Components\" />
   </ItemGroup>
 
