refactoring of controllers and middleware changed to attributefilter

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Middlewares\" />
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
